tests/snapshots/structure__package__pass__package_bin_target.snap
---
source: tests/structure.rs
expression: output
snapshot_kind: text
---
COMMAND:
structure
--package
package_bin_target

STDERR:

STDOUT:

crate package_bin_target
└── fn main: pub(crate)
