tests/snapshots/structure__package__pass__package_lib_target.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--package
package_lib_target

STDERR:

STDOUT:

crate package_lib_target
