tests/snapshots/structure__package__pass__virtual_workspace_single_package_bin_target.snap
---
source: tests/structure.rs
expression: output
---
CMD:
structure
--package
package_bin_target

STDERR:

STDOUT:

crate package_bin_target
└── fn main: pub(crate)
