tests/snapshots/structure__package__pass__workspace_single_package_lib_target.snap
---
source: tests/structure.rs
expression: output
snapshot_kind: text
---
COMMAND:
structure
--package
package_lib_target

STDERR:

STDOUT:

crate package_lib_target
